<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/baseline_directions_car_24"
        android:title="@string/title_car" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/baseline_map"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_inspect"
        android:icon="@drawable/baseline_inspect"
        android:title="@string/title_inspect" />
    <item
        android:id="@+id/navigation_discover"
        android:icon="@drawable/baseline_discover"
        android:title="@string/title_discover" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_profile"
        android:title="@string/title_profile" />


</menu>