<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>


<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/cl_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_payment_services"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/tb_chevron_left"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/payment_text"
            android:padding="10dp"
            ></ImageView>

        <TextView
            android:id="@+id/payment_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/payment_services"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/iv_back"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/chip_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/cl_payment_services">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:scrollbars="none"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.chip.ChipGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:singleLine="true">

                <!-- Chip 1 -->
                <com.google.android.material.chip.Chip
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/connect_services"
                    android:textColor="#c4c6c7"
                    android:textSize="14sp"
                    app:chipBackgroundColor="#303132"
                    app:chipStrokeColor="@android:color/transparent"
                    app:closeIconEnabled="false" />

                <!-- Chip 2 -->
                <com.google.android.material.chip.Chip
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/infotainment_apps"
                    android:textColor="#c4c6c7"
                    android:textSize="14sp"
                    app:chipBackgroundColor="#161718"
                    app:chipStrokeColor="@android:color/transparent"
                    app:closeIconEnabled="false" />

                <!-- Chip 3 -->
                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/on_demand_services"
                    android:textColor="#c4c6c7"
                    android:textSize="14sp"
                    app:chipBackgroundColor="#161718"
                    app:chipStrokeColor="@android:color/transparent"
                    app:closeIconEnabled="false" />

            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_payment_services"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:listitem="@layout/service_list_items"
        tools:itemCount="2"
        app:layout_constraintTop_toBottomOf="@+id/chip_layout"
        app:layout_constraintBottom_toTopOf="@+id/ll_service_info">


    </androidx.recyclerview.widget.RecyclerView>


    <LinearLayout
        android:id="@+id/ll_service_info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_payment_services">


        <androidx.cardview.widget.CardView
            android:id="@+id/cv_services_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_corners_top"
            android:backgroundTint="@color/black"
            app:cardElevation="0dp">



            <LinearLayout
                android:id="@+id/ll_service_title_section"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_corners_top"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"                    >

                <TextView
                    android:id="@+id/tv_service_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="32dp"
                    android:text="Infotainment Online"
                    android:textColor="@color/white"
                    android:textSize="24sp">

                </TextView>

                <LinearLayout
                    android:id="@+id/ll_status_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_service_title">

                    <ImageView
                        android:id="@+id/iv_red_dot"
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/circle_red" />

                    <TextView
                        android:id="@+id/tv_service_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="Expired"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_service_expiry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="on 22 August 2027"
                        android:textColor="#c4c6c7"
                        android:textSize="14sp" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/ll_auto_renew_section"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="#0e3a2f"
                    android:padding="5dp"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/tv_auto_renew_label"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Auto-renew"
                        android:paddingTop="10dp"
                        android:textColor="#c4c6c7"
                        android:textSize="14sp">

                    </TextView>

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/iv_auto_renew_switch"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginEnd="30dp"
                        android:layout_weight="1"

                        app:track="@drawable/custom_switch_track"
                        app:thumbTint="@drawable/switch_thumb_color_always_grey"
                        app:trackTint="@drawable/switch_track_color" />


                </LinearLayout>

                <TextView
                    android:id="@+id/tv_service_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="14dp"
                    android:text="Get the real-time info about the traffic with the online infotainment."
                    android:textColor="#c4c6c7"
                    android:textSize="18sp">

                </TextView>

                <LinearLayout
                    android:id="@+id/included_services_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="14dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Included services"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold">

                    </TextView>
                </LinearLayout>
                </LinearLayout>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/pay_list_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:listitem="@layout/pay_list_items"
                    tools:itemCount="2"
                    app:layout_constraintTop_toBottomOf="@+id/guideline"
                    android:layout_marginBottom="90dp">


                </androidx.recyclerview.widget.RecyclerView>



            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="bottom"
        >

        <ImageView
            android:id="@+id/purchase_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:src="@drawable/button">

        </ImageView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>



